cmake_minimum_required (VERSION 3.8)

include_directories ("include")

# Добавьте источник в исполняемый файл этого проекта.
add_executable (OmniORB4CppClient "src/OmniORB4CppClient.cpp")


target_link_libraries (OmniORB4CppClient OmniORB4Stubs)

set_target_properties (OmniORB4CppClient PROPERTIES VS_DEBUGGER_COMMAND_ARGUMENTS "IOR:010000000d00000049444c3a4563686f3a312e3000000000010000000000000064000000010102000c0000003139322e3136382e312e350017c500000e000000fe8000406300004548000000000000000200000000000000080000000100000000545441010000001c00000001000000010001000100000001000105090101000100000009010100")